# concurrentes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  free_semaphores.sh  free_sharedmemory.sh  kill_tp_grupal.sh
tp-grupal-01/: CMakeLists.txt  main.cpp  readme.md  threaded-version.cpp
tp-grupal-01/Log/: Log.cpp
tp-grupal-01/game/: Card.cpp  Card.h  DaringGame.cpp  DaringGame.h  Player.cpp  Player.h  Referee.cpp  Referee.h  Table.cpp  Table.h  TurnManager.cpp  TurnManager.h
tp-grupal-01/game/action/: Action.cpp  Action.h  HandAction.cpp  HandAction.h  SimpleAction.cpp  SimpleAction.h
tp-grupal-01/log/: Log.cpp  Log.h
tp-grupal-01/signals/: SIGINT_Handler.cpp  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
tp-grupal-01/util/: BarrierSimple.cpp  BarrierSimple.h  Fifo.cpp  Fifo.h  LockFile.cpp  LockFile.h  Pipe.cpp  Pipe.h  Semaphore.cpp  Semaphore.h  SharedMemory.cpp  SharedMemory.h  Thread.cpp  Thread.h  Utils.cpp  Utils.h
tp-grupal-02/: CMakeLists.txt  informe.md  readme.md
tp-grupal-02/common-util/: CMakeLists.txt  IpcException.cpp  IpcException.h  LockFile.cpp  LockFile.h  Log.cpp  Log.h  MessageQ.h  MessageQueue.cpp  MessageQueue.h  Semaphore.cpp  SharedMemory.cpp  Utils.cpp
tp-grupal-02/common-util/message/: Message.cpp  Message.h  MessageSender.cpp  MessageSender.h
tp-grupal-02/common-util/signals/: Process.cpp  Process.h  SIGCHLD_Handler.cpp  SIGCHLD_Handler.h  SIGINT_Handler.cpp  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
tp-grupal-02/db/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
tp-grupal-02/db-client/: CMakeLists.txt  main.cpp
tp-grupal-02/db/core/: Client.cpp  Client.h  Server.cpp  Server.h  Table.cpp  Table.h
tp-grupal-02/db/utils/: TextTable.h
tp-grupal-02/test/: client1.in  client2.in  client3.in  test.sh
tp0/: CMakeLists.txt  main.cpp
tp1/: CMakeLists.txt  main.cpp
tp2/: CMakeLists.txt  main.cpp
